# src/BeboerWeb.Api/Models/DTOs/PropertyManagement/TenantDto.cs
@@ -4,6 +4,11 @@
     {
         public int Id { get; set; }
 
+        public string Name { get; set; }
+        public string Phone { get; set; }
+
+        public double Balance { get; set; }
+
         public byte[] RowVersion { get; set; }
     }
 }
