# src/BeboerWeb.Mvc/Integrations/Api-swagger.json
@@ -2692,6 +2692,18 @@
             "type": "integer",
             "format": "int32"
           },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "phone": {
+            "type": "string",
+            "nullable": true
+          },
+          "balance": {
+            "type": "string",
+            "nullable": true
+          },
           "rowVersion": {
             "type": "string",
             "format": "byte",
